--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 			<p>Assortative mixing is a preference for a network's nodes to attach to others that are similar in some way. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
 			</blockquote>
 			<p>By knowing assortativity we can closely approximate the behavior of the network.</p>
-			<h4>Below assortativity towards movie attributes.</h4>
+			<h4>Assortativity towards movie attributes</h4>
 			<table>
 				<thead>
 					<tr>
@@ -395,7 +395,7 @@
 				<li>Actors tend to act both in short and long movies.</li>
 				<li>Actors show no preference towards some particular production company or director.</li>
 			</ul>
-			<h4>Below assortativity towards actor attributes.</h4>
+			<h4>Assortativity towards actor attributes</h4>
 			<table>
 				<thead>
 					<tr>
@@ -435,11 +435,11 @@
 			</ul>
 			
 			<h3>Communities</h3>
-			<p>Next we will see whether attributes are good communities, and will uncover some new.<p>
 			<blockquote>
 				<p>Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
 			</blockquote>
-			<h4>Modularity of movie attributes.</h4>
+			<p>Next we will see whether attributes are good communities, and will uncover some new.<p>
+			<h4>Modularity of movie attributes</h4>
 			<table>
 				<thead>
 					<tr>
@@ -498,7 +498,7 @@
 			</table>
 			<p><em>Hint: Numeric attributes like release year may have a very wide scale of values, which makes performance ugly. We discovered a correlation between maximal value on the scale and the performance: if some values go above ~1000, the algorithm hangs, hence some attributes have been rescaled to [1,10]. The modularity hasn't suffered.</em></p>
 			<ul><li>Production countries, release years, and languages are not good communities, that is for example, movies made within USA are interconnected only moderately, while they share many connections with movies made outside of USA. Film industry is an international industry.</li></ul>
-			<h4>Modularity of actor attributes.</h4>
+			<h4>Modularity of actor attributes</h4>
 			<table>
 				<thead>
 					<tr>
