--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 			
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
-			<h3>Statistics</h3>
+			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
 			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 			<ul>
 				<li><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</li>
@@ -276,8 +276,7 @@
 			</ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe></p>
 			<ul><li>Friendship paradox is true: the most actors know fewer actors than those know on average.</li></ul>
-			
-			<h3>Centrality</h3>
+			<h3><a aria-hidden="true" class="anchor" href="#centrality" id="centrality"><span aria-hidden="true" class="octicon octicon-link"></span></a>Centrality</h3>
 			<blockquote>
 				<p>In graph theory and network analysis, indicators of centrality identify the most important vertices within a graph</p>
 			</blockquote>
@@ -304,8 +303,7 @@
 			</blockquote>
 			<ul><li>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></li></ul>
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
-			
-			<h3>Attributes</h3>
+			<h3><a aria-hidden="true" class="anchor" href="#attributes" id="attributes"><span aria-hidden="true" class="octicon octicon-link"></span></a>Attributes</h3>
 			<p>Now we move on to observe different attributes (those of movies as well as those of actors). This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
 			<ul><li>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</li></ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></p>
@@ -319,8 +317,7 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/16.embed"></iframe></p>
 			<ul><li>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</li></ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
-			
-			<h3>Assortativity</h3>
+			<h3><a aria-hidden="true" class="anchor" href="#assortativity" id="assortativity"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assortativity</h3>
 			<blockquote>
 			<p>Assortative mixing is a preference for a network's nodes to attach to others that are similar in some way. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
 			</blockquote>
@@ -433,8 +430,7 @@
 				<li>Well-known actors tend to act with other well-known actors.</li>
 				<li>Height has no impact on decisions of companies to hire somebody or not.</li>
 			</ul>
-			
-			<h3>Communities</h3>
+			<h3><a aria-hidden="true" class="anchor" href="#communities" id="communities"><span aria-hidden="true" class="octicon octicon-link"></span></a>Communities</h3>
 			<blockquote>
 				<p>Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
 			</blockquote>
@@ -550,6 +546,7 @@
 				</tbody>
 			</table>
 			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
+			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
