--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 				<li><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</li>
 				<li>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</li>
 			</ul>
-			<p><img alt="Angry Video Game Nerd: The Movie (2014)" src="images/angry.jpg"></p>
+			<p><img class="imgTight" alt="Angry Video Game Nerd: The Movie (2014)" src="images/angry.jpg"></p>
 			<ul><li>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="Number">48</span> science fiction films.</li></ul>
-			<p><img alt="Kōichi Yamadera (1961)" src="images/Yamadera.png"></p>
+			<p><img class="imgTight" alt="Kōichi Yamadera (1961)" src="images/Yamadera.png"></p>
 			<ul>
 				<li>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</li>
 				<li><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</li>
@@ -268,7 +268,7 @@
 				<li>An actor knows <span class="Number">59</span> actors on average.</li>
 				<li><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</li>
 			</ul>
-			<p><img alt="Stan Lee (1922)" src="images/stanlee.jpg"></p>
+			<p><img class="imgTight" alt="Stan Lee (1922)" src="images/stanlee.jpg"></p>
 			<ul>
 				<li>A movie is connected through an actor to <span class="Number">18</span> movies on average.</li>
 				<li>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</li>
@@ -287,22 +287,22 @@
 			</blockquote>
 			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as they are the most central hubs in the co-stardom network of science fiction movies.</li></ul>
 			<p>
-				<img alt="Iron Man Three (2013)" src="images/ironman3.jpg">
-				<img alt="Transformers: Dark of the Moon (2011)" src="images/transformers.jpg">
-				<img alt="Captain America: Civil War (2016)" src="images/captainamerica.jpg">
+				<img class="imgTight" alt="Iron Man Three (2013)" src="images/ironman3.jpg">
+				<img class="imgTight" alt="Transformers: Dark of the Moon (2011)" src="images/transformers.jpg">
+				<img class="imgTight" alt="Captain America: Civil War (2016)" src="images/captainamerica.jpg">
 			</p>
 			<h4>Degree centrality</h4>
 			<blockquote>
 				<p>Degree centrality is the most basic method of defining centrality, basing the centrality only on the number of neighbours a node has.</p>
 			</blockquote>
 			<ul><li>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</li></ul>
-			<p><img alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
+			<p><img class="imgTight" alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
 			<h4>Eigenvector centrality</h4>
 			<blockquote>
 				<p>The eigenvector centrality thesis reads: A node is important if it is linked to by other important nodes.</p>
 			</blockquote>
 			<ul><li>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></li></ul>
-			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
+			<p><img class="imgTight" alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#attributes" id="attributes"><span aria-hidden="true" class="octicon octicon-link"></span></a>Attributes</h3>
 			<p>Now we move on to observe different attributes (those of movies as well as those of actors). This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
 			<ul><li>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</li></ul>
@@ -547,6 +547,7 @@
 			</table>
 			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
+			<p><img alt="Sample of actor network" src="images/A.png"></p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
