--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
 			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
+			<p><img alt="Sample of movie network" src="images/M.png"></p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
