--- a/index.html
+++ b/index.html
@@ -250,6 +250,15 @@
 			
 			<hr>
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
+			<h3><a aria-hidden="true" class="anchor" href="#network-representation" id="network-representation"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network representation</h3>
+			<h4>Bipartite network</h4>
+			<blockquote>
+				<p>The collaboration graph of movies and actors is called co-stardom network. Bipartite graph <strong>Bip=(M,A,E)</strong> will have two node sets <strong>M - movies</strong>, <strong>A - actors</strong> and edges in <strong>E</strong> that only connect nodes from opposite sets. <strong>M</strong> is connected to <strong>A</strong> if <strong>A</strong> has played in <strong>M</strong>. Hence there are no direct <strong>M - M</strong> or <strong>A - A</strong> links.</p>
+			</blockquote>
+			<h4>Movie network</h4>
+			<p><img alt="Sample of movie network" src="images/M.png"></p>
+			<h4>Actor network</h4>
+			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
 			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
 			<ul>
@@ -547,8 +556,6 @@
 			</table>
 			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
-			<p><img alt="Sample of actor network" src="images/A.png"></p>
-			<p><img alt="Sample of movie network" src="images/M.png"></p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
