--- a/index.html
+++ b/index.html
@@ -255,6 +255,29 @@
 			<blockquote>
 				<p>The collaboration graph of movies and actors is called co-stardom network. Bipartite graph <strong>Bip=(M,A,E)</strong> will have two node sets <strong>M - movies</strong>, <strong>A - actors</strong> and edges in <strong>E</strong> that only connect nodes from opposite sets. <strong>M</strong> is connected to <strong>A</strong> if <strong>A</strong> has played in <strong>M</strong>. Hence there are no direct <strong>M - M</strong> or <strong>A - A</strong> links.</p>
 			</blockquote>
+			The following properties refer to bipartite network of science fiction movies only.
+			<table>
+				<thead>
+					<tr>
+						<th>Nodes</th>
+						<th>Links</th>
+						<th>Components</th>
+						<th>Largest component</th>
+						<th>Clustering coef.</th>
+						<th>Probability</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>227,155</td>
+						<td>273,936</td>
+						<td>6,594</td>
+						<td>186,639</td>
+						<td>0.0</td>
+						<td>0.000011</td>
+					</tr>
+				</tbody>
+			</table>
 			<p><img alt="Sample of bipartite network" src="images/Bip.png"></p>
 			<h4>Movie network</h4>
 			<blockquote>
