--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			<blockquote>
 				<p>The collaboration graph of movies and actors is called co-stardom network. Bipartite graph <strong>Bip=(M,A,E)</strong> will have two node sets <strong>M - movies</strong>, <strong>A - actors</strong> and edges in <strong>E</strong> that only connect nodes from opposite sets. <strong>M</strong> is connected to <strong>A</strong> if <strong>A</strong> has played in <strong>M</strong>. Hence there are no direct <strong>M - M</strong> or <strong>A - A</strong> links.</p>
 			</blockquote>
-			The following properties refer to bipartite network of science fiction movies only.
+			<p>The following properties refer to bipartite network of science fiction movies only.</p>
 			<table>
 				<thead>
 					<tr>
@@ -315,7 +315,44 @@
 			<blockquote>
 				<p>Bipartite network projection is an extensively used method for compressing information about bipartite networks (<a href="https://en.wikipedia.org/wiki/Bipartite_network_projection">read here</a>). For the convenience of directly showing the relation structure among a particular set of nodes, bipartite networks are usually compressed by one-mode projection. This means that the ensuing network contains nodes of only either of the two sets, and two <strong>M</strong> (or, alternatively, <strong>A</strong>) nodes are connected only if when they have at least one common neighboring <strong>A</strong> (or, alternatively, <strong>M</strong>) node.</p>
 			</blockquote>
-			<p>The first projection is network of movies connected if they have an actor in common. The sample of this network is shown as graph below.</p>
+			<p>The first projection is network of movies connected if they have an actor in common. Parameters are shown in the following table.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Nodes</th>
+						<th>Links</th>
+						<th>Clustering coef.</th>
+						<th>Probability</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>13,989</td>
+						<td>127,209</td>
+						<td>0.36</td>
+						<td>0.0013</td>
+					</tr>
+				</tbody>
+			</table>
+			<table>
+				<thead>
+					<tr>
+						<th>Min degree</th>
+						<th>Max degree</th>
+						<th>Median degree</th>
+						<th>Mean degree</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>343</td>
+						<td>6</td>
+						<td>18.18</td>
+					</tr>
+				</tbody>
+			</table>
+			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of movie network" src="images/M.png"></p>
 			<h4>Actor network</h4>
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
