--- a/index.html
+++ b/index.html
@@ -355,6 +355,44 @@
 			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of movie network" src="images/M.png"></p>
 			<h4>Actor network</h4>
+			<p>The second projection is network of actors connected if they played in the same movie. Parameters are shown in the following table.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Nodes</th>
+						<th>Links</th>
+						<th>Clustering coef.</th>
+						<th>Probability</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>172,650</td>
+						<td>5,111,268</td>
+						<td>0.91</td>
+						<td>0.00034</td>
+					</tr>
+				</tbody>
+			</table>
+			<table>
+				<thead>
+					<tr>
+						<th>Min degree</th>
+						<th>Max degree</th>
+						<th>Median degree</th>
+						<th>Mean degree</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>3052</td>
+						<td>36</td>
+						<td>59.21</td>
+					</tr>
+				</tbody>
+			</table>
+			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
 			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
