--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
 			<p>Let us get a feel of newly calculated modularity by drawing a random graph.</p>
 			<p><img alt="Best partition by Louvain algorithm" src="images/louvain_com.png"></p>
-			<p>Each coloured node (and edge) belong to community 0, and their colour depends upon degree. All grey-coloured nodes (and edges) belong to other communities. We can discover the almost perfect partition. We recognize it by the cardinality of links within nodes of the same community (strong boundaries of coloured sections) being higher than the cardinality of links to other communities, as communities are defined as groups of densely interconnected nodes that are only sparsely connected with the rest of the network.</p>
+			<p>Each coloured node (and edge) belong to community 0, and their colour depends upon degree. All grey-coloured nodes (and edges) belong to other communities. We can discover the almost perfect partition. We recognize it by the cardinality of links within nodes of the same community (strong boundaries of coloured sections) being higher than the cardinality of links to other communities.</p>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
