--- a/index.html
+++ b/index.html
@@ -395,30 +395,24 @@
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
 			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
-			<ul>
-				<li><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</li>
-				<li>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</li>
-			</ul>
+			<p><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</p>
+			<p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
 			<p><img class="imgTight" alt="Angry Video Game Nerd: The Movie (2014)" src="images/angry.jpg"></p>
-			<ul><li>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="Number">48</span> science fiction films.</li></ul>
+			<p>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="Number">48</span> science fiction films.</p>
 			<p><img class="imgTight" alt="Kōichi Yamadera (1961)" src="images/Yamadera.png"></p>
-			<ul>
-				<li>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</li>
-				<li><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</li>
-				<li>Probability that a particular actor plays in a particular movie is <span class="Number">0.0014%</span></li>
-				<li>Probability that an actor plays in two random movies is <span class="Number">0.13%</span></li>
-				<li>Probability that a movie hires two random actors is <span class="Number">0.034%</span></li>
-				<li>An actor knows <span class="Number">59</span> actors on average.</li>
-				<li><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</li>
-			</ul>
+			<p>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</p>
+			<p><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</p>
+			<p>Probability that a particular actor plays in a particular movie is <span class="Number">0.0014%</span></p>
+			<p>Probability that an actor plays in two random movies is <span class="Number">0.13%</span></p>
+			<p>Probability that a movie hires two random actors is <span class="Number">0.034%</span></p>
+			<p>An actor knows <span class="Number">59</span> actors on average.</p>
+			<p><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</p>
 			<p><img class="imgTight" alt="Stan Lee (1922)" src="images/stanlee.jpg"></p>
-			<ul>
-				<li>A movie is connected through an actor to <span class="Number">18</span> movies on average.</li>
-				<li>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</li>
-				<li>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></li>
-			</ul>
+			<p>A movie is connected through an actor to <span class="Number">18</span> movies on average.</p>
+			<p>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</p>
+			<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe></p>
-			<ul><li>Friendship paradox is true: the most actors know fewer actors than those know on average.</li></ul>
+			<p>Friendship paradox is true: the most actors know fewer actors than those know on average.</p>
 			<h3><a aria-hidden="true" class="anchor" href="#centrality" id="centrality"><span aria-hidden="true" class="octicon octicon-link"></span></a>Centrality</h3>
 			<blockquote>
 				<p>In graph theory and network analysis, indicators of centrality identify the most important vertices within a graph</p>
@@ -428,7 +422,7 @@
 			<blockquote>
 				<p>Betweenness centrality quantifies the number of times a node acts as a bridge along the shortest path between two other nodes. Closeness centrality measures the mean distance from a node to other nodes.</p>
 			</blockquote>
-			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as they are the most central hubs in the co-stardom network of science fiction movies.</li></ul>
+			<p>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as they are the most central hubs in the co-stardom network of science fiction movies.</p>
 			<p>
 				<img class="imgTight" alt="Iron Man Three (2013)" src="images/ironman3.jpg">
 				<img class="imgTight" alt="Transformers: Dark of the Moon (2011)" src="images/transformers.jpg">
@@ -438,27 +432,27 @@
 			<blockquote>
 				<p>Degree centrality is the most basic method of defining centrality, basing the centrality only on the number of neighbours a node has.</p>
 			</blockquote>
-			<ul><li>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</li></ul>
+			<p>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</p>
 			<p><img class="imgTight" alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
 			<h4>Eigenvector centrality</h4>
 			<blockquote>
 				<p>The eigenvector centrality thesis reads: A node is important if it is linked to by other important nodes.</p>
 			</blockquote>
-			<ul><li>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></li></ul>
+			<p>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
 			<p><img class="imgTight" alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#attributes" id="attributes"><span aria-hidden="true" class="octicon octicon-link"></span></a>Attributes</h3>
 			<p>Now we move on to observe different attributes (those of movies as well as those of actors). This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
-			<ul><li>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</li></ul>
+			<p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></p>
-			<ul><li>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</li></ul>
+			<p>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe></p>
-			<ul><li>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</li></ul>
+			<p>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/10.embed"></iframe></p>
-			<ul><li>There more a movie invests, the more it becomes in return.</li></ul>
+			<p>There more a movie invests, the more it becomes in return.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/14.embed"></iframe></p>
-			<ul><li>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</li></ul>
+			<p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/16.embed"></iframe></p>
-			<ul><li>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</li></ul>
+			<p>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			<h3><a aria-hidden="true" class="anchor" href="#assortativity" id="assortativity"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assortativity</h3>
 			<blockquote>
@@ -636,7 +630,7 @@
 				</tbody>
 			</table>
 			<p><em>Hint: Numeric attributes like release year may have a very wide scale of values, which makes performance ugly. We discovered a correlation between maximal value on the scale and the performance: if some values go above ~1000, the algorithm hangs, hence some attributes have been rescaled to [1,10]. The modularity hasn't suffered.</em></p>
-			<ul><li>Production countries, release years, and languages are not good communities, that is for example, movies made within USA are interconnected only moderately, while they share many connections with movies made outside of USA. Film industry is an international industry.</li></ul>
+			<p>Production countries, release years, and languages are not good communities, that is for example, movies made within USA are interconnected only moderately, while they share many connections with movies made outside of USA. Film industry is an international industry.</p>
 			<h4>Modularity of actor attributes</h4>
 			<table>
 				<thead>
@@ -664,7 +658,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<ul><li>None of the actor-related attributes build good communities, in particular, for attribute birth place it means that actors act with international actors very commonly, while for attribute birth year it means that teens commonly play with adults, and vice versa.</li></ul>
+			<p>None of the actor-related attributes build good communities, in particular, for attribute birth place it means that actors act with international actors very commonly, while for attribute birth year it means that teens commonly play with adults, and vice versa.</p>
 			<p>Next we will illustrate the modularity of the attribute <strong>birth place</strong> by drawing Danish actors and their co-actors.</p>
 			<p><img alt="Sample of network of danish actors" src="images/A_com.png"></p>
 			<p>We see that only a few Danes acted with other Danes together. Hence, birth places fail to represent communities in actor-to-actor network.</p>
@@ -691,7 +685,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<ul><li>The communities detected by an algorithm are much better than those of attributes.</li></ul>
+			<p>The communities detected by an algorithm are much better than those of attributes.</p>
 			<p>Let us get a feel of newly calculated modularity by drawing a random graph.</p>
 			<p><img alt="Best partition by Louvain algorithm" src="images/louvain_com.png"></p>
 			<p>Each coloured node (and edge) belong to community 0, and their colour depends upon degree. All grey-coloured nodes (and edges) belong to other communities. We can discover the almost perfect partition. We recognize it by the cardinality of links within nodes of the same community (strong boundaries of coloured sections) being higher than the cardinality of links to other communities.</p>
