--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of bipartite network" src="images/Bip.png"></p>
 			<p><em>Hint: curious about graph design? Check out the code of <strong>NetworkHelper.draw_graph_attr</strong></em></p>
-			<h4>Movie network</h4>
+			<h4>Movie-to-movie network</h4>
 			<blockquote>
 				<p>Bipartite network projection is an extensively used method for compressing information about bipartite networks (<a href="https://en.wikipedia.org/wiki/Bipartite_network_projection">read here</a>). For the convenience of directly showing the relation structure among a particular set of nodes, bipartite networks are usually compressed by one-mode projection. This means that the ensuing network contains nodes of only either of the two sets, and two <strong>M</strong> (or, alternatively, <strong>A</strong>) nodes are connected only if when they have at least one common neighboring <strong>A</strong> (or, alternatively, <strong>M</strong>) node.</p>
 			</blockquote>
@@ -353,7 +353,7 @@
 			</table>
 			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of movie network" src="images/M.png"></p>
-			<h4>Actor network</h4>
+			<h4>Actor-to-actor network</h4>
 			<p>The second projection is network of actors connected if they played in the same movie. Parameters are shown in the following table.</p>
 			<table>
 				<thead>
