--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
 			<p>The sample of this network is shown as graph below.</p>
 			<p><img alt="Sample of actor network" src="images/A.png"></p>
 			<h3><a aria-hidden="true" class="anchor" href="#statistics" id="statistics"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statistics</h3>
-			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
+			<blockquote>
+				<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
+			</blockquote>
 			<p><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</p>
 			<p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
 			<p><img class="imgTight" alt="Angry Video Game Nerd: The Movie (2014)" src="images/angry.jpg"></p>
