--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
 			<p><img alt="Best partition by Louvain algorithm" src="images/louvain_com.png"></p>
 			<p>Each coloured node (and edge) belong to community 0, and their colour depends upon degree. All grey-coloured nodes (and edges) belong to other communities. We can discover the almost perfect partition. We recognize it by the cardinality of links within nodes of the same community (strong boundaries of coloured sections) being higher than the cardinality of links to other communities.</p>
 			<h2><a aria-hidden="true" class="anchor" href="#text-analysis" id="text-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Text analysis</h2>
+			<p><img alt="Kidô senshi Gandamu (1981)" src="images/wc.png"></p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
