--- a/index.html
+++ b/index.html
@@ -690,12 +690,7 @@
 			<p>Films based on a novel enjoy the popularity.</p>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
 			<p>More general terms murder, female-nudity, sex and death describe what the most films are about: murders and sex.</p>
-			<p>Keywords provided by IMDB highly correlate with contents of entire genres.</p>
-			<p>The most common words of science fiction are alien, outer-space, monster, and robot.</p> 
-			<p>Horror films can be mainly described by terms murder, death, and blood.</p>
-			<p>Terms murder and police are on the top of crime genre.</p>
-			<p>The term murder is also very frequent in dramas.</p>
-			<p>War films commonly show WWII and nazis.</p>
+			<p>Keywords provided by IMDB highly correlate with contents of entire genres. The most common words of science fiction are alien, outer-space, monster, and robot. Horror films can be mainly described by terms murder, death, and blood. Terms murder and police are on the top of crime genre. The term murder is also very frequent in dramas. War films commonly show WWII and nazis.</p>
 			<p><img alt="Keywords of top 250" src="images/kwdstop250.png"></p>
 			<p>The most profitable movies are biased towards particular terms.</p>
 			<p>Explosion is one of the most frequent words for the most expensive movies. The more a production company has money, the more it invests in special effects, and the more explosions it shows. Across top 250 films by gross the most promising are blockbusters. Box-office-hit keyword (describing a highly-grossing picture) is also the most common in top 250 films by budget. All those keywords are less common for movies with the highest IMDB ratings though, where the independent-film and mockumentary (parody) top the list.</p>
