--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
 			<p>The most common term is independent-film, a feature film that is produced mostly or completely outside of the major film studio system.</p>
 			<p>Films based on a novel enjoy the popularity.</p>
 			<p><img alt="Most common keywords by genre" src="images/kwdsbygenre.png"></p>
-			<p>More general terms murder, female-nudity, sex and death describe what the most films are about: murders and sex.</p>
+			<p>More general terms <strong>murder</strong>, <strong>female-nudity</strong>, <strong>sex</strong> and <strong>death</strong> describe what the most films are about: murders and sex.</p>
 			<p>Keywords provided by IMDB highly correlate with contents of entire genres. The most common words of science fiction are alien, outer-space, monster, and robot. Horror films can be mainly described by terms murder, death, and blood. Terms murder and police are on the top of crime genre. The term murder is also very frequent in dramas. War films commonly show WWII and nazis.</p>
 			<p><img alt="Keywords of top 250" src="images/kwdstop250.png"></p>
 			<p>The most profitable movies are biased towards particular terms.</p>
 			<p>Explosion is one of the most frequent words for the most expensive movies. The more a production company has money, the more it invests in special effects, and the more explosions it shows. Across top 250 films by gross the most promising are blockbusters. Box-office-hit keyword (describing a highly-grossing picture) is also the most common in top 250 films by budget. All those keywords are less common for movies with the highest IMDB ratings though, where the independent-film and mockumentary (parody) top the list.</p>
 			<p>The most successful and top-rated films seem to differ a lot, they even mirror opposite trends: almost none of the keyword independent-film are present in the keywords set of the most expensive and profitable movies. On the other side, none of the term box-office-hit are in top-rated films. The same observation we do wenn we look at word love. Quite a lot of top-rated movies are about love, but only a bunch of most successful films are (which are mainly blockbusters with breathtaking explosions), that is, the top-rated films interact with feelings of watchers and trigger sympathy.</p>
 			<p>There is no single attribute correlated with similarity. Willing to act in movies of similar content depends on a dicision of an actor rather than on a movie. This decision isn't depending upon year, nor it is depending upon gross, budget and other measures: it is an output of complex psychology of an actor.</p>
-			<p>The most movies (73%) aren't similar regarding keywords, meaning that keywords are maybe to concrete for a similarity measure. But, having seen those keywords anywhere, you will be able to identify the movie right away.</p>
+			<p>The most movies - <span class="Number">173%</span> - aren't similar regarding keywords, meaning that keywords are maybe to concrete for a similarity measure. But, having seen those keywords anywhere, you will be able to identify the movie right away.</p>
 			<p>The actors tend to play in movies described by similar keywords (moderately though).</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
